@@ -1,3 +1,11 @@
+2020-12-23  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-promo.c (promote_node): New function.
+	(pkl_promo_ps_op_div): Use promote_node.
+	(pkl_promo_ps_op_binary_intoffstrarr): Likewise.
+	(pkl_promo_ps_op_bconc): Likewise.
+	(pkl_promo_ps_op_mul): Likewise.
+
 2020-12-22  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* poke/poke.c (initialize): Define poke_interactive_p in the compiler.
